Understand your purpose

--- a/contents/compelling/use_a_familiar_and_obvious_user_interface.tex
+++ b/contents/compelling/use_a_familiar_and_obvious_user_interface.tex
@@ -1,4 +1,4 @@
-\subsection{The user interface must be obvious and familiar}
+\subsection{Use a familiar and obvious user interface}
 
 The system can display the data in a precise, optimized, fully customized way. It can offer the user
 the possibility to improve their life considerably. However, if we do not provide a user friendly experience, all our efforts will be in vain.
