--- a/contents/preliminaries/know_your_user.tex
+++ b/contents/preliminaries/know_your_user.tex
@@ -1,48 +1,50 @@
 \subsection{Know your user}
 
-A large part of the objective outlined in section 3.1, design, is defined by the service that we want to offer
-to the user. Asssisting the user, (our client), is our primary purpose. \\
+Asssisting the user - our client - is our primary purpose. \\
 
-We must be aware of the needs of users in order to meet their demands, as well as being aware of deficiencies in the market, so we can cover any 'holes'.
-We should cater for all audiences equally.\\
+We must be aware of the needs of our users in order to meet their demands, as well as being aware of deficiencies in the market, so we can cover any 'holes'.
+In the case of public-good data, you also need to consider how to meet the needs of certain groups of users who might be disadvataged in some way.\\
 
-Whether our target audience is unique, that is, take all types of users equally, considering the
-average user, as for a characteristic user, we should know the homogeneous characteristics of our group.\\
+% TODO: not sure what this means.
+% Whether our target audience is unique, that is, take all types of users equally, considering the
+% average user, as for a characteristic user, we should know the homogeneous characteristics of our group.\\
 
-Therefore we need a current study on the psychological, social and economic level of the target group, to ascertain not only
-their needs, but also their wishes.\\
+So you will need access to information on the psychological, social and economic characteristics of your target users, to ascertain not only
+their needs, but also their wishes and preferences.\\
 
-Once the users have access to the data we provide, it is important to have a feedback process.
-It would be ideal to be able to perform an analysis of user behavior, to see their guidelines regarding the data obtained.
+It is important to have a feedback process, both to ensure that your objectives are met, as well as to indicate how you can improve your offering.
+This feedback process might be passive i.e. by collecting page and traffic data, or it might be explicit, through the use of explicit feedback requests
+and/or surveys.\\
 
 \subsubsection*{Suggested strategies} 
 
-Define what type of user is intended. Study both their characteristics and the situation of the
-market.\\
-
-Use a mechanism that helps us obtain feedback, either by a system of points, test or
-an automatic mechanism that allows tracking the behavior of the user. We can also choose the combination of both
-options.
+\begin{itemize}
+    \item Define the characteristics of your users. Study both their characteristics and the situation of the
+    market.
+    \item Use a mechanism that helps us obtain feedback, either by a system of points, test or
+    an automatic mechanism that allows tracking the behavior of the user. We can also choose the combination of both
+    options.
+\end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots}
 
-Air Guru is aimed at the general population, therefore it's appropriate to present complete information in simple way. In addition, we pay special attention to users who may have a
-disease or medical condition, caused or affected by, air pollution.\\
+Air Guru is aimed at the general population, therefore it's appropriate to present fully analysed information in the simplest way possible.
+In addition, we pay special attention to users who may have a
+disease or medical condition, caused or affected by air pollution.\\
 
-During the market study, we realized that many existing tools offered information about air pollution in real time, but we could missed the following deficiencies:
+During our market study, we found that many existing tools offer information about air pollution in real time, but have the following deficiencies:
 \begin{itemize}
-    \item Unnexistent costumized pollutan's exposure. We are interested to know to which levels of pullutions we are exposed on the long term, no only in a determinate time.
-    \item Need to use complicated devices to monitor the exposition. Our gol is to facilitate the information to the user with the minimal complication for them.
-    \item No related information about pollutants and their influence on our health or medical conditions.
+    \item No ability to track exposure over time. We are interested to know the level of pullution we are exposed over the long term, not only at a specific instant.
+    \item Overly complicated presentation, suitable more for further analysis than presentation to the general public.
+    \item No of explanation of the consequences of pollution exposure, particularly their influence on health or medical conditions.
 \end{itemize}
 
-Once implemented, we tested the webtool with 14 users. Our webtool integrates Google Analytics that allow us to evaluate
-user behavior, how many pages they access, and how long they stay on them. Also, after the test, we conducted a survey to measure not only the level of satisfaction with the webtool, but also to verify the utility and if the user was able to achieve their objective.\\
+Once Aire Guru was operational, we tested it with 14 identified users. Our webtool integrates Google Analytics that allow us to evaluate
+user behavior, how many pages they access, and how long they stay on each page.
+After testing, we surveyed the users to measure not only the level of overall satisfaction with the webtool,
+but also to verify the utility and determine if the user was able to achieve their objective.\\
 
-The market study made us clearly see the shortcomings that exist in current applications.\\
-
-The survey gave us positive evaluations regarding the useability, interpretability, and depth of information reported.\\
-
+The survey gave us positive evaluations regarding the useability, interpretability, and depth of information reported. 
 Thanks to Aire Guru, users noticed about medical conditions with the potential to affect them personally, that could be caused or made worse by air pollution.\\
 
 \begin{figure}[ht]
