Suggested strategies all in itemized lists

--- a/contents/accessible/dont_just_publish_the_raw_data.tex
+++ b/contents/accessible/dont_just_publish_the_raw_data.tex
@@ -31,12 +31,14 @@ From this data, we need to select the relevant fields necessary to represent spe
 
 \subsubsection*{Suggested strategies} 
 
-Study the objective sought and resort to the help of experts if necessary to acquire the necessary knowledge
-on the subject. Design a model that provides the information we are looking for.\\
+\begin{itemize}
+    \item Study the objective sought and resort to the help of experts if necessary to acquire the necessary knowledge
+    on the subject. Design a model that provides the information we are looking for.
 
-We obtain our required data through a series of processes such as extraction, transformation and
-cleaning of the data. Without automation, these processes are tedious and time consuming. It is advisable to 
-implement this automatization.
+    \item We obtain our required data through a series of processes such as extraction, transformation and
+    cleaning of the data. Without automation, these processes are tedious and time consuming. It is advisable to 
+    implement this automatization.
+\end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots} 
 
