--- a/contents/accessible/make_your_data_available.tex
+++ b/contents/accessible/make_your_data_available.tex
@@ -16,10 +16,12 @@ Therefore, we can not say that data interfaces are commonly accessible in a usef
 
 \subsubsection*{Suggested strategies} 
 
-We must provide the information required by the user in an uncomplicated manner, in a format that is easy to read and interpret, and we must describe it in a way that is easy to understand and quick to digest..\\
-
-In order to collect the information which is relevant to the user, we will need to carry out processes such as extraction, transformation and
-data cleaning.
+\begin{itemize}
+    \item We must provide the information required by the user in an uncomplicated manner, in a format that is easy to read and interpret,
+          and we must describe it in a way that is easy to understand and quick to digest..\\
+    \item In order to collect the information which is relevant to the user, we will need to carry out processes such as extraction, transformation and
+          data cleaning.
+\end{itemize}
  
 \subsubsection*{In the context of Aire Guru \ldots} 
 
