--- a/contents/accessible/remove_all_barriers_to_access.tex
+++ b/contents/accessible/remove_all_barriers_to_access.tex
@@ -20,8 +20,10 @@ these advertising without interfering in the representation of our information.
 
 \subsubsection*{Suggested strategies} 
 
-To remove the biggest amount of barriers we will try to offer a low rate system, no force the user to provide any unjustified 
-data and avoid advertising which obstructs the representation of our data.
+\begin{itemize}
+    \item To remove the biggest amount of barriers we will try to offer a low rate system, no force the user to provide any unjustified 
+    data and avoid advertising which obstructs the representation of our data.
+\end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots} 
 
