--- a/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
+++ b/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
@@ -8,16 +8,18 @@ the meaning in a natural way.
 
 \subsubsection*{Suggested strategies} 
 
-Consider what type of representational format is most appropriate to the task. If it is not possible, we will provide de 
-resources needed to help the user to understand and place the information in context. \\
+\begin{itemize}
+    \item Consider what type of representational format is most appropriate to the task. If it is not possible, we will provide de 
+    resources needed to help the user to understand and place the information in context. \\
 
-We should stady which type of representation fits better to which kind of data,A graph may not necessarily be the 
-clearest way to represent information.\\
+    \item We should stady which type of representation fits better to which kind of data,A graph may not necessarily be the 
+    clearest way to represent information.\\
 
-We should take into account the target audience, and how we can most effectively transmit information to them. 
-If we decide that a using graph is the best solution, we must consider carefully which type to use. For example, 
-if we talk about samples and we want to know the density, we will lean towards a density graph, and if we look for the difference
-between sexes, we will use a pie chart.
+    \item We should take into account the target audience, and how we can most effectively transmit information to them. 
+    If we decide that a using graph is the best solution, we must consider carefully which type to use. For example, 
+    if we talk about samples and we want to know the density, we will lean towards a density graph, and if we look for the difference
+    between sexes, we will use a pie chart.
+\end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots} 
 
