--- a/contents/compelling/engage_the_user_on_an_emotional_level.tex
+++ b/contents/compelling/engage_the_user_on_an_emotional_level.tex
@@ -13,19 +13,21 @@ emotional impulses. We may wish the world to be a rational place driven by the c
 
 \subsubsection*{Suggested strategies}
 
-So, we must create desire. Whether that is a desire to know more, a desire to see 'what happens next' or a desire to avoid a negative outcome.
-Avoiding a negative outcome innevitably involves invoking some fear. Before we cast this as some Machiavellian evil, consider that the simple
-technique of using a stop sign, radioactivity icon, or red text as a way of indicating danger or some situation that requires attention, is an
-application of exactly this technique. We are invoking a fear-response, however mild. \\
+\begin{itemize}
+    \item So, we must create desire. Whether that is a desire to know more, a desire to see 'what happens next' or a desire to avoid a negative outcome.
+    Avoiding a negative outcome innevitably involves invoking some fear. Before we cast this as some Machiavellian evil, consider that the simple
+    technique of using a stop sign, radioactivity icon, or red text as a way of indicating danger or some situation that requires attention, is an
+    application of exactly this technique. We are invoking a fear-response, however mild.
 
-Note however that not all triggers are culturally independent. Colour is particularly interesting in this respect, and your use of colour might
-need to be modified for different target audiences (\textbf{NEED REFERENCE}). \\
+    \item Note however that not all triggers are culturally independent. Colour is particularly interesting in this respect, and your use of colour might
+    need to be modified for different target audiences (\textbf{NEED REFERENCE}).
 
-Desire can be maintained by creating an ongoing narrative, or letting the data tell a story. This can be as simple as showing the change in 
-values over time, or can be more complex, such as involving not only changing values over time, but also showing the relationship between causes and
-effects. Where real-time data is available, allow users to set alarms so that they are notified of specific changes, makes the data a part of the user's
-life in an ongoing fashion. It is important not to overdo that however - alerts that cannot be easily cancelled create a negative emotion that you
-definitely want to avoid. \\
+    \item Desire can be maintained by creating an ongoing narrative, or letting the data tell a story. This can be as simple as showing the change in 
+    values over time, or can be more complex, such as involving not only changing values over time, but also showing the relationship between causes and
+    effects. Where real-time data is available, allow users to set alarms so that they are notified of specific changes, makes the data a part of the user's
+    life in an ongoing fashion. It is important not to overdo that however - alerts that cannot be easily cancelled create a negative emotion that you
+    definitely want to avoid.
+\end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots}
 
