--- a/contents/compelling/make_sure_your_data_is_reliable.tex
+++ b/contents/compelling/make_sure_your_data_is_reliable.tex
@@ -41,12 +41,14 @@ better to have a high degree of compliance for the data that interests us in our
 
 \subsubsection*{Suggested strategies} 
 
-The first step is to compare the information with the source of origin. With the dataset and the definition
-of each of the fields, the scale and interpretability of the fields and values must be checked.
-Then we can perform different analysis of the data to check its consistency and compliance.
-It is possible to use different graphs and see if there are extreme or strange values.
-Database analysis tools can tell us the completeness of the fields, that is, what percentage of the
-samples contain each field.
+\begin{itemize}
+    \item The first step is to compare the information with the source of origin. With the dataset and the definition
+    of each of the fields, the scale and interpretability of the fields and values must be checked.
+    \item perform different analysis of the data to check its consistency and compliance.
+    \item use different graphs and see if there are extreme or strange values.
+    \item Database analysis tools can tell us the completeness of the fields, that is, what percentage of the
+    samples contain each field.
+\end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots} 
 
