--- a/contents/compelling/show_the_user_that_you_are_trustworthy.tex
+++ b/contents/compelling/show_the_user_that_you_are_trustworthy.tex
@@ -9,10 +9,12 @@ Always ask for permission to capture data and make clear what it will be used fo
 
 \subsubsection*{Suggested strategies} 
 
-Use secure platforms, such as SSL if we develop a web application.
-If we use third-party APIs, make sure to check the level of security they offer.
-Implement a system that does not allow linking the data with a user.
-Give the user the possibility to delete their data if they wish.
+\begin{itemize}
+    \item Use secure platforms, such as SSL if we develop a web application.
+    \item If we use third-party APIs, make sure to check the level of security they offer.
+    \item Implement a system that does not allow linking the data with a user.
+    \item Give the user the possibility to delete their data if they wish.
+\end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots} 
 
