--- a/contents/compelling/solve_a_real_problem.tex
+++ b/contents/compelling/solve_a_real_problem.tex
@@ -17,12 +17,14 @@ of the user.
 
 \subsubsection*{Suggested strategies} 
 
-First of all discover in what way the data can help users. Next we have to find a way to let him see
-because they are important to him and how he can benefit from using them in his daily life.\\
-
-If the data is updated periodically, it is necessary to analyze what type of variations are important in the user's daily life.
-Conduct a market study and see if there are already products that offer this information. If this is the case, it will be analyzed because
-It is attractive to the user and try to improve it.
+\begin{itemize}
+    \item First of all discover in what way the data can help users.
+    \item Next we have to find a way to let him see
+    because they are important to him and how he can benefit from using them in his daily life.
+    \item If the data is updated periodically, it is necessary to analyze what type of variations are important in the user's daily life.
+    Conduct a market study and see if there are already products that offer this information. If this is the case, it will be analyzed because
+    it is attractive to the user and try to improve it.
+\end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots} 
 
