--- a/contents/compelling/use_a_familiar_and_obvious_user_interface.tex
+++ b/contents/compelling/use_a_familiar_and_obvious_user_interface.tex
@@ -24,14 +24,14 @@ requires information from the system, they receive an indication that their requ
     
 \subsubsection*{Suggested strategies} 
 
-We must analyze carefully what information we want to presentaccording to our objetive. We will make a clear design, where all the elements are easy to recognize.
-The structure will entail a logical sequence, as if it were a narrative history.\\
-
-Each action that the user perform, must be clearly acknowledged (eg by some change in a button, or a spinning wheel icon) results must be delivered in less than five seconds.
-We will steer clear of complicated representations, we will aim for familiarity and intuitiveness.For example, if a calendar is used for the selection of dates, it doesn't 
-make sense to use an hourglass, this will just be confusing forthe user.\\
-
-Offer flexibility, the user must be able to interact with the interface and choose what they want to see.
+\begin{itemize}
+    \item We must analyze carefully what information we want to presentaccording to our objetive. We will make a clear design, where all the elements are easy to recognize.
+    The structure will entail a logical sequence, as if it were a narrative history.\\
+    \item Each action that the user perform, must be clearly acknowledged (eg by some change in a button, or a spinning wheel icon) results must be delivered in less than five seconds.
+    \item We will steer clear of complicated representations, we will aim for familiarity and intuitiveness.For example, if a calendar is used for the selection of dates, it doesn't 
+    make sense to use an hourglass, this will just be confusing forthe user.\\
+    \item Offer flexibility, the user must be able to interact with the interface and choose what they want to see.
+\end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots}
 
