--- a/contents/compelling/your_site_should_look_good.tex
+++ b/contents/compelling/your_site_should_look_good.tex
@@ -24,9 +24,11 @@ Certainly, at some point the novelty wears off, but, even so, the user has learn
 
 \subsubsection*{Suggested strategies}
 
-To make an attractive design, we must keep abreast of current trends, as well as study good design practices.
-It is highly recommended to maintain a simple and clean design, to use standards and mechanisms that are familiar to users,
-to care of details and to present our identity.
+\begin{itemize}
+    \item To make an attractive design, we must keep abreast of current trends, as well as study good design practices.
+    \item It is highly recommended to maintain a simple and clean design, to use standards and mechanisms that are familiar to users,
+    to care of details and to present our identity.
+\end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots}
 
