--- a/contents/relevant/personalize_the_data_for_each_user.tex
+++ b/contents/relevant/personalize_the_data_for_each_user.tex
@@ -14,10 +14,13 @@ user as an individual.
 
 \subsubsection*{Suggested strategies} 
 
-We should study how the data will help the user or user-subgroups as we mention in the section \textit{3.3 Know your user} and from this point, make it more specific. In this way
-  we go from obtaining relevant data in a general way to be relevant in a personal way. We have to think about the
-  particular user, and find a way to extract the results that are specifically adapted to them in a particular
-  moment and place.
+\begin{itemize}
+  \item We should study how the data will help the user or user-subgroups as we mention in the section \textit{3.3 Know your user} and from this point, make it more specific. In this way
+    we go from obtaining relevant data in a general way to be relevant in a personal way.
+  \item We have to think about the
+    particular user, and find a way to extract the results that are specifically adapted to them in a particular
+    moment and place.
+\end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots}
 
