--- a/contents/relevant/present_consequences_and_outcomes.tex
+++ b/contents/relevant/present_consequences_and_outcomes.tex
@@ -19,9 +19,12 @@ we should start simple and move to more complex representations.
 
 \subsubsection*{Suggested strategies} 
 
-Once a goal has been set, we must stipulate the necessary fields of the dataset that we need. That is, we select the fields that interest us. 
-Following this, we need to analyze the data provided and see if the list of fields that the source offers us is sufficient to rech the chosen objective.
-If not directly, we the combination of them. Next, we decide which values are more outstanding and we will provide them to the user.
+\begin{itemize}
+    \item Once a goal has been set, we must stipulate the necessary fields of the dataset that we need. That is, we select the fields that interest us. 
+    \item Following this, we need to analyze the data provided and see if the list of fields that the source offers us is sufficient to rech the chosen objective.
+    If not directly, we the combination of them.
+    \item Next, we decide which values are more outstanding and we will provide them to the user.
+\end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots}
 
