--- a/contents/relevant/the_facts_and_just_the_facts.tex
+++ b/contents/relevant/the_facts_and_just_the_facts.tex
@@ -18,8 +18,11 @@ outside of the main representation, because the user will not have to access thi
 
 \subsubsection*{Suggested strategies}
 
-Focus on the objective, show only the data directly related to our goal, do not annotate the data
-simply because it appears in the dataset, and don't include distracting technical details irrelevant to the user.
+\begin{itemize}
+    \item Focus on the objective, show only the data directly related to our goal
+    \item don't annotate the data simply because it appears in the dataset
+    \item don't include distracting technical details irrelevant to the user.
+\end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots} 
 
