--- a/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
+++ b/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
@@ -1,37 +1,35 @@
 \subsection{Use concepts and language that your user understands}
 
-The key point is that the user must be able to understand what we are trying to transmit. We must create a fluid, 
+A essential point is that the user must be able to understand what we are trying to communicate. We must create a fluid, 
 easy interaction between the user and the representation of the data. Therefore we must speak with the language of 
-the ordinary person, using common vocabulary, avoiding specialist jargon and communicating the objective in the simplest, 
-clearest manner. This representation of information plays a fundamentally important role, enabling the user to absorb 
-the meaning in a natural way.
+the ordinary person, using common vocabulary, avoiding specialist jargon and communicating in the simplest, 
+clearest manner. The representation of information plays a fundamentally important role, enabling the user to absorb 
+the underlying meaning in a natural way.\\
 
 \subsubsection*{Suggested strategies} 
 
 \begin{itemize}
-    \item Consider what type of representational format is most appropriate to the task. If it is not possible, we will provide de 
-    resources needed to help the user to understand and place the information in context. \\
+    \item Consider what type of representational format is most appropriate to the task.
+    
+    \item Provide the resources needed to help the user to understand and place the information in context.
 
-    \item We should stady which type of representation fits better to which kind of data,A graph may not necessarily be the 
-    clearest way to represent information.\\
+    \item Consider carefully which type of representation fits better to which kind of data. a graph may not necessarily be the clearest representation.
 
-    \item We should take into account the target audience, and how we can most effectively transmit information to them. 
-    If we decide that a using graph is the best solution, we must consider carefully which type to use. For example, 
-    if we talk about samples and we want to know the density, we will lean towards a density graph, and if we look for the difference
-    between sexes, we will use a pie chart.
+    \item If using graph is the best solution, consider carefully which type to use. For example, 
+    if you are representing individual samples and want to show the density, lean towards a density graph; if presenting data discriminated by gender,
+    maybe a pie chart is the most appropriate.
 \end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots} 
 
-The Aire Guru tool presents the information in the native language of the city, using simple vocabulary and a 
-straightforward style. Colors and graphic resources are used as icons. In addition, a unified design structure to represent data has 
-been used over the whole site, giving the user a consistent visualization experience. \\
+The Aire Guru tool presents the information in the native language of the city (Spanish), avoids using difficult scientific terminology, instead using simple vocabulary and a 
+straightforward style. Colors and graphic resources are used, as are icons. In addition, the site uses a unified design language to represent data,
+giving the user a consistent visualization experience. \\
 
-One of the objectives is to represent pollution by areas of the city, which is why a map has been used - the 
-obvious and familiar visual image of the different places in the city. This is a more legible format since the user
-does not need to make a continous effort to place the data in each part of the city. The index shows an indicator with 
-five levels represented by a color scale from the turquoise to red ("Good" "Fair" "Poor" "Bad" and "Unhealthy"). 
-The color-coding is consistent with the colors which are used in official sources, thereby avoiding onfusion any 
+One of the objectives is to represent pollution by geographic area of the city, which is why a map has been used - the 
+obvious and familiar visual image of the different places in the city. The pollution index shows an indicator with 
+five levels represented by a color scale from turquoise to red - "Good" "Fair" "Poor" "Bad" and "Unhealthy". 
+This color-coding is consistent with the colors which are used in official sources, thereby avoiding confusion for any 
 user who might consult official sources.
 
 \begin{figure}[ht]
@@ -40,10 +38,10 @@ user who might consult official sources.
     \caption{EAQI Levels}
 \end{figure}
 
-These icons below are used to help the user have an immediate idea of the situation, since they are even more
+These icons below are used to help the user get an immediate idea of the pollution level, since they are even more
 decriptive and self-explanatory than just colors alone. Danger is, of course, almost universally indicated by 
-the colour red, and is therefore used appropriately. However, no all cultures has the same perception about
-the blue or green, missing what they indicate\\
+the colour red, and is therefore used appropriately. However, not all cultures have the same perception about
+blue or green, missing what they indicate. In this case we have a limited geographic market, so it isn't an issue.\\
 
 \begin{figure}[ht]
     \centering
@@ -51,8 +49,8 @@ the blue or green, missing what they indicate\\
     \caption{Iconografica Aire Guru}
 \end{figure}
 
-For the graphs that show variations in time,  we have chosen line graphs as being most appropriate,
-since they show the continuous evolution over a period of time. To represent the different components of the AQI, we chose a
+For the graphs that show variations in time, we have chosen line graphs as being most appropriate,
+since they are good at showing continuous evolution over a period of time. To represent the different components of the AQI, we use a
 graph of stacked bars, since it is easy to see what proportion of the total AQI is formed by which pollutant. \\
 
 \begin{figure}[ht]
@@ -65,14 +63,6 @@ graph of stacked bars, since it is easy to see what proportion of the total AQI 
     \caption{Charts}
 \end{figure}
 
-In addition, to explain the concept of AQI and create an awarnes about the influence that air pollution has on us, Aire Guru includes it in the
+In addition, to explain the concept of AQI and create an awareness about the influence of air pollution, Aire Guru includes it in the
 glossary. This aids understanding of why air pollution should matter to us, with descriptions of the pollutants, medical complications, sources of contamination, the iconography used and
 an explanation of what AQI is and how it is calculated. \\
-
-\begin{itemize}
-    \item The language used in the whole webtool is a common language, avoiding the use of difficult scientific terminology but providing clearly described information to understand the situation.
-    \item The most appropriate graphs for each type of data have been researched and chosen.
-    \item Some specific terms could not be substituted as "Air Quality Index".
-    \item The tools necessary to understand the concept have been provided. The European standard of air quality has been used to
-          represent the values and offer the user resources on the page for their comprehension in addition to external resources.
-\end{itemize}
