Let the world know that you exist (needs more)

--- a/contents/accessible/let_the_world_know_that_you_exist.tex
+++ b/contents/accessible/let_the_world_know_that_you_exist.tex
@@ -5,6 +5,7 @@ of the existence of the resource, they can not use it.
 
 \subsubsection*{Suggested strategies} 
 
+% TODO: need more
 The best way is to advertise the product in the right media with right format.
 
 \subsubsection*{In the context of Aire Guru \ldots}
@@ -13,7 +14,7 @@ Our webtool is implemented for the city of Málaga, so we are currently working 
 It is currently available in the open data portal in the web site tab (https://datosabiertos.malaga.eu/aplicaciones). \\
 
 Aire Guru participated in the first open data reuse contest organized by the Málaga City Council (http://cemi.malaga.eu/es/novedades/detalle/1-Concurso-de-Reutilizacion-de-Datos-Abiertos-del-Ayuntamiento-de-Malaga)
-and was a finalist in the web page category.
+and was a finalist in the web page category. This provided valuable exposure.
 
 \begin{figure}[ht]
     \centering
